2015-03-27  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/patch.nanorc: Recognize also Debian package diffs.
	Fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1300565
	requested by Rolf Leggewie.
	* src/search.c (do_replace_loop): Adjust some whitespace and wrapping.

2015-03-25  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/debian.nanorc: Slightly widen and relax the header regex.
	* doc/syntax/python.nanorc: Hashes inside triple-quoted strings should
	not cause comment colouring.  (Inside single-qouted strings neither,
	but then quotes in comments will be coloured like strings.)  This
	solves https://bugs.launchpad.net/ubuntu/+source/nano/+bug/481363.
	* src/global.c (strtomenu): Remove mistaken menu name -- as the
	formatter allows no interaction it needs no associated menu.
	* src/text.c (do_formatter): Remove unneeded statement -- nothing
	has changed the value of 'currmenu'.
	* src/global.c (strtomenu), doc/man/nanorc.5: Allow rebinding the
	linter when nano was configured with --disable-speller.

2015-03-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Avoid the spell checker reporting
	an error when the marked region is zero bytes long.  The message
	is not needed -- it gets printed by the caller.  This generalizes
	the fix for Savannah bug #29393.
	* src/text.c (do_alt_speller): Do not unset the mark before the
	possible bailout because of a zero-sized region.
	* NEWS: Option --noread allows writing, not reading, to named pipes.

2015-03-22  Chris Allegretta <chrisa@asty.org>
	* src/text.c (do_alt_speller): timestamp can just be a time_t.
	Fixes compilation on win32.

GNU nano 2.4.0  - 2015.03.22
2015-03-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/chars.c (move_mbleft): Start looking for a multibyte char
	not at the start of the string, but only as far back as such a
	char can possibly be.  Change suggested by Mark Majeres.