@@ -3,6 +3,9 @@
 	Fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1300565
 	requested by Rolf Leggewie.
 	* src/search.c (do_replace_loop): Adjust some whitespace and wrapping.
+	* src/search.c (do_replace_loop): Place a call to edit_refresh better,
+	and remove two unneeded ones.  This greatly speeds up nano when doing
+	a Replace All with *lots* of occurrences.
 
 2015-03-25  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/syntax/debian.nanorc: Slightly widen and relax the header regex.
